@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Vision ZL7431 In-Wall Switch, Single Relay -->
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" index="1" label="Behavior" size="1" min="1" max="2" value="2">
+            <Help></Help>
+            <Item label="2 Wall Switches" value="1"/>
+            <Item label="Light Indicator" value="1"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="1">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+        </Associations>
+    </CommandClass>
+</Product>
